--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="main">
       <div class="card">
         <div class="img-sec">
-          <img src="images/image-qr-code.png" alt="qr-code-bar" />
+          <img src="image-qr-code.png" alt="qr-code-bar" />
         </div>
         <div class="text heading">
           <p>
